--- a/views/bookinstance_detail.pug
+++ b/views/bookinstance_detail.pug
@@ -20,3 +20,14 @@ block content
 
         dt Ідентифікатор:
         dd= bookinstance._id
+
+    hr
+    p
+        a.btn.btn-danger(
+            href=bookinstance.url + '/delete'
+            style='margin-top:15px;'
+        ) Видалити екземпляр
+        a.btn.btn-secondary(
+            href=bookinstance.url + '/update', style='margin-top:15px;'
+            ) Редагувати екземпляр
+
